--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,16 +1,1 @@
-<ion-menu [content]="content">
-    <ion-header>
-        <ion-toolbar>
-            <ion-title>Menu</ion-title>
-        </ion-toolbar>
-    </ion-header>
-    <ion-content padding>
-        <ion-list inset>
-            <button menuClose ion-item *ngFor="let pagina of paginas" (click)="abrePagina(pagina)">
-                {{pagina.titulo}}
-            </button>
-        </ion-list>
-    </ion-content>
-</ion-menu>
-
-<ion-nav id="nav" #content [root]="rootPage"></ion-nav>
+<ion-nav [root]="rootPage"></ion-nav>
