Finalizado integração viagem / passageiro / motorista

--- a/src/pages/passageiro/passageiro.scss
+++ b/src/pages/passageiro/passageiro.scss
@@ -1,3 +1,21 @@
 page-passageiro {
+    
+    .card-center {
+        text-align: center;
+    }
+
+    .card-img-left {
+        position: relative;
+        width: 10rem;
+        height: 10rem;
+        padding: 15px;
+    }
+
+    .card-img-right {
+        position: relative;
+        width: 10rem;
+        height: 10rem;
+        padding: 15px;
+    }
 
 }
